--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 body {
   height:100%;
   font-family: 'Roboto', sans-serif;
+  text-decoration: none;
 }
 
 header {
@@ -15,56 +16,122 @@ header {
   background:map-get($colors,"white");
   box-shadow: 0px 15px 63px -15px rgba(0, 0, 0, 0.5);
 }
+.navbar {
+  background-color: var(--white-color);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+  min-height: 100px;
+  }¨
 
-.topmenu {
-  position: relative;
+  .nav-item { color: map-get($colors,"white"); 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    
+    }
+    .nav-item:hover {color: map-get($colors,"white"); }
+
+    .nav-toggler { font-size: 40px; }
+    .nav-toggler:focus { outline: none;}
   
- 
-  &__logo {
-    float: left;
-    width: 300px;
-    align-items: center;
-  }
+ .nav-link{
   
-  &__nav {
-    position: absolute;
-    top: 50px;
-    right: 0;
-  
-    li {
+  color: map-get($colors,"white"); 
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.8em;
+  font-weight: bold;
       display: inline-block;
-      background-color:map-get($colors,"primary");
+      background-color:map-get($colors,"secondary");
+      letter-spacing: 1px;
+      margin-top: 80px;
       margin-left: 10px;
-      padding: 1em;
+      padding: 5px;
   
       /* font */
       font-family: 'Montserrat', sans-serif;
       font-size: 0.8em;
       font-weight: bold;
-       }
-      }
-  }
-  
-#nav-1 {
-  background:map-get($colors,"secondary");
+
+      /* interacción */
+      transition: 0.03s ease;
+      color:map-get($colors,"white");
+      font-size: 11px;
+      text-decoration: none;
+      border-top: 0.5px solid;
+      border-bottom: 0.5px solid;
+      padding: 5px 0;
+      margin: 0 5px;
+      
+        li {        
+          background-color:map-get($colors,"primary");
+          margin-left: 5px;
+          padding: 1em;
+          }
+        }
+    
+          .nav-link:hover {
+          color: map-get($colors,"white");
+          border-top: 1px solid map-get($colors,"white");
+          border-bottom: 1px solid map-get($colors,"white");
+          padding: 5px 0;
+        }
+
+   
+        /* Portfolio */
+
+h1 { font-size: 66px; font-weight: 700; line-height: 80px; }
+h2 { font-size: 48px; margin-bottom: 30px; text-decoration: none; }
+
+
+
+p {
+    font-size: 18px;
+    color: var(--dark-color);
+    opacity: .5;
+    line-height: 1.8;
+    margin-bottom: 0px;
+    text-decoration: none;
 }
 
-.link-1 {
-  transition: 0.02s ease;
-  color:map-get($colors,"white");
-  font-size: 10px;
+a:hover {text-decoration: none;}
+
+.content-center {
+  max-width: 800px;
+  margin: 0 auto 10px auto;
+  text-align: center;
   text-decoration: none;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
-  padding: 20px 0;
-  margin: 0 20px;
-
-  &:hover {
-    border-top: 4px solid map-get($colors,"white");
-    border-bottom: 4px solid map-get($colors,"white");
-    padding: 6px 0;
-  }
 }
+
+section { padding: 60px 0; }
+
+.portfolio-container {
+  position: relative;
+  overflow: hidden;
+  margin: 10px 0;
+  border-radius: 2px;
+  
+}
+
+.portfolio-container img {
+  -moz-transition: all 0.8s;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
+}
+
+.portfolio-container:hover img {
+  -moz-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+
+
+.portfolio-details:hover h3 h5 {
+  margin-bottom: 0px;
+  text-decoration:none ;
+}
+
+/* Portfolio */
+
 
 .subtitle {
   color:map-get($colors,"primary");
@@ -73,7 +140,7 @@ header {
 }
 /* SLIDER */
 .slider {
-width: 95%;
+width: 100%;
 margin: auto;
 overflow: hidden;
 }
@@ -155,21 +222,24 @@ align-items: center;
 /* FOOTER */
 .footer {
 height: -80px;
+margin-top: 10px ;
 padding: 20px 0px 20px 0px;
-background: linear-gradient(45deg,#F8ABE8 25%, #fad2ec 50%,#F8ABE8 100%);
+background: map-get($colors,"secondary");
 text-align: center;
 width: 100%;
 
 }
 
 h6 {
+  font-size: 10px; text-decoration: none;
   color:map-get($colors,"white");
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  
-  
+   
 }
+
 /* FOOTER */
+
 
 
 
@@ -219,9 +289,10 @@ grid-row-end: span 1;
 /* CONTACTO */
 .formulario {
   background-image: url("../imagenes/web_jupa03.jpg");;
-    background-repeat: no-repeat;
+ background-size: 100vw 100vh;
+
+  background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
   height: auto;
   width: 100%;
   font-family: 'Roboto', sans-serif;
@@ -231,7 +302,7 @@ grid-row-end: span 1;
   form {
   width: 450px;
   margin: auto;
-  background-color:map-get($colors,"gray");
+  background-color: rgba(241, 241, 241, .5);
   padding: 10px 20px;
   box-sizing: border-box;
   margin-top: 20px;
@@ -280,6 +351,70 @@ grid-row-end: span 1;
 
 }
 
+
+@mixin white-gradient {
+	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+}
+
+$animationSpeed: 40s;
+
+// Animation
+@keyframes scroll {
+	0% { transform: translateX(0); }
+	100% { transform: translateX(calc(-250px * 7))}
+}
+
+
+// Styling
+.slider-marcas {
+	background: white;
+	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
+	height: 150px;
+	margin: auto;
+	overflow:hidden;
+	position: relative;
+	width: 980px;
+	
+	&::before,
+	&::after {
+		@include white-gradient;
+		content: "";
+		height: 100px;
+		position: absolute;
+		width: 200px;
+		z-index: 2;
+	}
+	
+	&::after {
+		right: 0;
+		top: 0;
+		transform: rotateZ(180deg);
+	}
+
+	&::before {
+		left: 0;
+		top: 0;
+	}
+	
+	.slide-track {
+		animation: scroll $animationSpeed linear infinite;
+		display: flex;
+		width: calc(250px * 14);
+	}
+	
+	.slide {
+		height: 100px;
+		width: 250px;
+	}
+}
+
+@media (min-width: 768px) {
+  .carousel-multi-item-2 .col-md-3 {
+  float: left;
+  width: 10%;
+  max-width: 100%; } }
+  
+  
 
 @media screen and (max-width:700px) {
   
@@ -369,164 +504,29 @@ grid-row-end: span 1;
   background-color:map-get($colors,"violet");
   }
   
+  @media (max-width: 375px) { 
+    form {
+      width: 90%;
+    }
 
-.hd {
-  display: -webkit-box;
-  display: flex;
-  text-transform: uppercase;
-  justify-content: center;
+@media (max-width: 575.98px) { 
 
-  .conocimiento {
-    color: map-get($colors,"gray");
-    text-align: center;
-    margin: 0;
-    font-size: 30px;
-     }
-  
+    h1 { font-size: 40px; line-height: normal; }
+    .portfolio-details h2 { font-size: 32px; }
+    .plans { min-width: unset; padding: 40px; }
+    .carousel-item p { font-size: 20px; }
+
+    .footer-menu { 
+        display: block !important;
+        padding: 20px 0 !important;
+        font-size: 20px;
+    
+    }
 }
 
-.content1 {
-  display: -webkit-box;
-  display: flex;
-  font-family: Roboto;
-  -webkit-box-direction: normal;
-  flex-flow: row wrap;
-  justify-content: center;
-  box-orient: horizontal;
+
+@media (min-width: 768px) and (max-width: 991.98px) { 
+    .portfolio-details h2 { font-size: 30px; }
+    .plans { min-width: unset; padding: 40px 20px;}
+  }
 }
-
-.circular {
-  
-  background: linear-gradient(45deg,#F8ABE8 25%, #fad2ec 50%,#F8ABE8 100%);
-    border-radius: 50%;
-    box-shadow: 0px 15px 63px -15px rgba(0, 0, 0, 0.5);
-    height: 200px;
-    margin: 1em auto;
-    position: relative;
-    min-width: 200px;
-    margin: 50px;
-    padding-top: 50px;
-    -webkit-transition: all .3s linear;
-    transition: all .3s linear;
-   
-
-  .circular-progress04 {
-   
-
-    &::before {
-      background-color: #FAFAFA;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      color: rgba(0, 0, 0, 0.54);
-      content: "45%";
-      font-size: 40px;
-      font-weight: bold;
-      height: 100%;
-      left: 0;
-      line-height: 200px;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      -webkit-transform: scale(0.87);
-      transform: scale(0.87);
-      width: 100%;
-    }
-
-    &:hover {
-      box-shadow: 0 0 100px 1px rgba(255, 214, 112, 0.35);
-    }
-  }
-
-  .circular-progress03 {
-    
-    &::before {
-      background-color: #FAFAFA;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      color: rgba(0, 0, 0, 0.54);
-      content: "95%";
-      font-size: 40px;
-      font-weight: bold;
-      height: 100%;
-      left: 0;
-      line-height: 200px;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      -webkit-transform: scale(0.87);
-      transform: scale(0.87);
-      width: 100%;
-    }
-
-    &:hover {
-      box-shadow: 0 0 100px 1px rgba(255, 214, 112, 0.35);
-    }
-  }
-
-  .circular-progress02 {
-    
-    &::before {
-      background-color: #FAFAFA;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      color: rgba(0, 0, 0, 0.54);
-      content: "85%";
-      font-size: 40px;
-      font-weight: bold;
-      height: 100%;
-      left: 0;
-      line-height: 200px;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      -webkit-transform: scale(0.87);
-      transform: scale(0.87);
-      width: 100%;
-    }
-
-    &:hover {
-      box-shadow: 0 0 100px 1px rgba(255, 214, 112, 0.35);
-    }
-  }
-
-  .circular-progress01 {
-    
-
-    &::before {
-      background-color: #FAFAFA;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-      color: rgba(0, 0, 0, 0.54);
-      content: "90%";
-      font-size: 40px;
-      font-weight: bold;
-      height: 100%;
-      left: 0;
-      line-height: 200px;
-      position: absolute;
-      text-align: center;
-      top: 0;
-      -webkit-transform: scale(0.87);
-      transform: scale(0.87);
-      width: 100%;
-    }
-
-    &:hover {
-      box-shadow: 0 0 100px 1px rgba(255, 214, 112, 0.35);
-    }
-  }
-
-  
-    &:hover {
-      box-shadow: 0 0 100px 1px rgba(255, 214, 112, 0.35);
-    }
-  }
-
-  .circular-text {
-    margin-bottom: 10px;
-    padding-top: 160px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    text-align: center;
-    text-transform: uppercase;
-  }
