--- a/style.scss
+++ b/style.scss
@@ -79,17 +79,16 @@ header {
 
 /* Texto Presentacion */
 .content-center {
-  max-width: 800px;
-  margin: 50px 0px 50px 180px;
-  text-decoration: none;
-  
-}
+  max-width: 100%;
+  margin: 60px 0 60px 0px;
+  align-content: center;
+  }
+
 
 h3 {
   font-family: 'Montserrat', sans-serif;
-  text-align: justify;
+  text-align: center;
   letter-spacing: 1px;
-  margin: 0px auto 10px auto;
   font-size: 15px;
 
 }
@@ -176,17 +175,16 @@ h6 {
   margin: 0 !important;
   padding: 25px;
  }
-
 #tablero img {
   width: 100%;
   height: auto;
 }
-
 #tablero img:hover {
   border: 5px solid map-get($colors,"white");
 }
 
 /* FIN TABLERO */
+
 
 /* CLIENTES */
 #clientes .col-lg-3 {
@@ -202,21 +200,29 @@ h6 {
 #clientes img:hover {
   border: 5px solid map-get($colors,"white");
 }
-
 /* FIN CLIENTES */
 
 /* CONTACTO */
 .formulario {
-  background-image: url("../imagenes/web_jupa03.jpg");;
-  background-size: 100vw 100vh;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: auto;
+  position: relative;
   width: 100%;
+  height: auto;
+  background: url("../imagenes/web_jupa03.jpg");;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: 'Roboto', sans-serif;
   padding: 75px 0px 75px 0px;
-  
-
+          
   form {
   width: 450px;
   margin: auto;
@@ -225,8 +231,7 @@ h6 {
   box-sizing: border-box;
   margin-top: 20px;
   border-radius: 7px;
-  max-width: 500px;
-}
+  }
 
   h2 {
   color: #fff;
@@ -236,7 +241,7 @@ h6 {
   margin-bottom: 20px;
 }
 
-  input {
+  input, textarea {
   width: 100%;
   margin-bottom: 20px;
   padding: 7px;
@@ -269,7 +274,7 @@ h6 {
 }
 
 }
-
+/* FIN CONTACTO */
 
 @mixin white-gradient {
 	background: linear-gradient(to right,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
@@ -288,17 +293,17 @@ $animationSpeed: 40s;
 .slider-marcas {
 	background: white;
 	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
-	height: 150px;
+  height: 150px;
+  width: 73%;
 	margin: auto;
 	overflow:hidden;
-	position: relative;
-	width: 980px;
-	
+  position: relative;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
 	&::before,
 	&::after {
-		@include white-gradient;
-		content: "";
-		height: 100px;
+	  height: 100px;
 		position: absolute;
 		width: 200px;
 		z-index: 2;
@@ -377,7 +382,7 @@ $animationSpeed: 40s;
 
   
   @media (max-width: 480px) { 
-    .formulario {width: 70%;}
+    form {width: 100%;}
             }
     
 @media (max-width: 575.98px) { 
